# arena-web2api-v4

./: .dockerignore  .env.arena  .env.example  .gitignore  ARCHITECTURE.md  BACKGROUND_MODE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  REVIEW.md  SESSION-2026-06-28.md  arena  arena-go  auto-setup.sh  broker-only.sh  docker-compose.yml  extract_cookie.py  install-shortcut.sh  install.sh  keepalive.sh  main.py  migrate.py  precheck.py  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: ci.yml  release.yml
extension/: README.md  background.js  manifest.json  popup.html  popup.js
migrations/: 001_initial.py  002_add_last_activity.py
src/: attachments.py  auth.py  browser_proxy.py  circuit_breaker.py  client.py  concurrency.py  config.py  conversation.py  conversation_store.py  cookie_pool.py  debug_logging.py  errors.py  idempotency.py  logger.py  metrics.py  model_registry.py  models.py  per_key_rate_limit.py  rate_limiter.py  recaptcha.py  recaptcha_solver.py  request_id.py  session.py  sse_parser.py  token_bridge.py  token_broker.py  tokenizer.py  tools.py  utils.py
src/routes/: admin.py  battle.py  chat.py  models.py
termux-boot/: start.sh
tests/: run_tests.sh  test_cookie_refresh.py  test_hardening.py  test_pipeline.py  test_recaptcha.py  test_resilience.py  test_sse.py  test_token_broker.py  test_tools.py  test_tools_integration.py
web-ui/: chat.html
